--- a/thermometer.wiki
+++ b/thermometer.wiki
@@ -1,11 +1,39 @@
 <noinclude>__NOTOC__
+
+{{#widget:Thermometer
+  |currentTotal=1000
+  |goal=8900
+  |width=100
+  |height=400
+  |framed=true
+  |asof=08/04/2016}}
+
 This widget allows you to embed a fundraising thermometer on your wiki page.
 
 Created by [http://wiki.dosburros.com/User:grahams grahams]
 
-<!--
 == Using this widget ==
-For information on how to use this widget, see [http://www.mediawikiwidgets.org/Twitter widget description page on MediaWikiWidgets.org].-->
+=== Example Widget Syntax ===
+
+<pre>
+{{#widget:Thermometer
+  |currentTotal=1000
+  |goal=8900
+  |width=100
+  |height=400
+  |framed=true
+  |asof=08/04/2016}}
+</pre>
+
+=== Parameters ===
+
+* '''percentage''' - The percentage of the thermometer.  If omitted, you must include the '''currentTotal''' and '''goal''' params
+* '''currentTotal''' - The current cash total.  This parameter is only used if '''percentage''' is omitted
+* '''goal''' - The overall cash goal.  This parameter is only used if '''percentage''' is omitted
+* '''width''' - The width of the widget in pixels
+* '''height''' - The height of the widget in pixels
+* '''framed''' - If true, will wrap the thermometer in a frame with a title indicating the percentage and the "As of" date.
+* '''asof''' - A string, usually a date, which will be inserted into the frame header if '''framed''' is true
 
 == Copy to your site ==
 To use this widget on your site, just install [http://www.mediawiki.org/wiki/Extension:Widgets MediaWiki Widgets extension] and copy [{{fullurl:{{FULLPAGENAME}}|action=edit}} full source code] of this page to your wiki as '''{{FULLPAGENAME}}''' article.
